@@ -1,3 +1,8 @@
+2006-08-07  Bastien Nocera  <hadess@hadess.net>
+
+	* freedesktop.org.xml.in: Move the Quicktime metalink magic
+	to its own mime-type: application/x-quicktime-media-link
+
 2006-07-14  Bastien Nocera  <hadess@hadess.net>
 
 	* freedesktop.org.xml.in: add application/x-snes-rom and
